<resources>
    <string name="app_name">EnChinga</string>
    <string name="application_name">Delivery!</string>
    <string name="user_name_txt">Ingresa tu correo electrónico</string>
    <string name="password_txt">Ingresa tu contraseña</string>
    <string name="sign_in">Iniciar sesión</string>
    <string name="sign_up">Registrate</string>
    <string name="title_sing_up_txt">Registrate ahora!</string>
    <string name="instruccions">Para registrarte en la app, ocupamos tus datos</string>
    <string name="name">Write your name</string>
    <string name="lasname">Write your lasname</string>
    <string name="write_number_celphone">write your number the cel</string>
    <string name="dummy_txt">Djklshdfgfpiqwesljkdhcg</string>
    <string name="price_dummy">$56.00</string>
    <string name="home_title_txt">Home view</string>
    <string name="cerrar_cesion">cerrar sesion</string>
    <string name="fre">free</string>
    <string name="name_shoptxt">Pizzetos</string>
    <string name="num">4.5</string>
    <string name="hrs_accese">7:00am-8:00pm</string>
    <string name="welcome_title">Bienvenido 👋</string>
    <string name="registrate_welcome">registrate</string>
    <string name="user_name_input_txt">Email</string>
    <string name="password_hint_txt">Ingresa tu contraseña</string>
    <string name="email_txt">Email</string>
    <string name="did_you_forgot_your_password_txt">¿Olvidaste tu contraseña?</string>
    <string name="welcome_back_title">Bienvenido de nuevo 👋</string>
    <string name="welcome_back_subtitle">Inicia sesión con tu cuenta</string>
    <string name="email_hint_txt">Ingresa tu correo electrónico</string>
    <string name="dont_have_account_txt">¿No tienes cuenta aún?</string>
    <string name="sign_up_here_txt">Regístrate aquí</string>
    <string name="massage_welcome_txt">¡Tu comida favorita en un solo lugar!</string>
    <string name="subtitle_welcome_2">Ordenala en cualquier lugar, en cualquier momento</string>
    <string name="sign_in_welcome">Continuar</string>
    <string name="sign_up_welcome">Registrate</string>
    <string name="massage_sign_up_txt">Registrate 🗒️</string>
    <string name="subtitle_sign_up">"Para registrarte necesitamos tus siguientes datos. "</string>
    <string name="name_sign_up_txt">Nombre</string>
    <string name="name_sign_up_">Ingresa tu nombre</string>
    <string name="sign_up_txt">Registrate</string>
    <string name="have_an_account">¿Ya tienes una cuenta?</string>
    <string name="lastname_sign_up_">Ingreasa tu appellido paterno</string>
    <string name="last_name_sign_up">Ingresa tu primer apellido</string>
    <string name="number_cel_sign_up">Ingresa tu numero de celular</string>
    <string name="direccioon_sign">Ingresa tu dirreción</string>
    <string name="continuar_congratulacion_txt">Continuar</string>
    <string name="primary_button">continuar</string>
    <string name="txt_congrats">Tu cuenta esta completa revisa nuestro menu</string>
    <string name="title_txt_congrats">Felicidades</string>
    <string name="top_of_week">Lo mas top</string>
    <string name="card_week">Los mejores lugares</string>
    <string name="week_card">Tacos al pastor</string>
</resources>